--- a/index.html
+++ b/index.html
@@ -609,6 +609,11 @@
     </div>
     <div class="image-center">
       <img src="/images/banners/cta-banner.jpg" alt="">
+      <div class="discount">
+        <h3>25% DISCOUNT</h3>
+        <h2>Summer <br> Collection </h2>
+        <p>Starting @ $10 <br> <strong>SHOP NOW</strong> </p>
+      </div>
     </div>
     <div class="services">
       <h3>Our Services</h3>
@@ -616,41 +621,43 @@
         <div class="service-item">
           <i class="fa-solid fa-ship"></i>
           <div class="service-item-text">
-            <p>Worldwide Delivery</p>
-            <p>For Order Over $100</p>
+            <p class="service-title">Worldwide Delivery</p>
+            <p class="service-term">For Order Over $100</p>
           </div>
         </div>
         <div class="service-item">
-          <i class="fa-solid fa-ship"></i>
+          <i class="fa-solid fa-rocket"></i>
           <div class="service-item-text">
-            <p>Worldwide Delivery</p>
-            <p>For Order Over $100</p>
+            <p class="service-title">Next Day Delivery</p>
+            <p class="service-term">UK Orders Only</p>
           </div>
         </div>
         <div class="service-item">
-          <i class="fa-solid fa-ship"></i>
+          <i class="fa-solid fa-phone"></i>
           <div class="service-item-text">
-            <p>Worldwide Delivery</p>
-            <p>For Order Over $100</p>
+            <p class="service-title">Best Online Support</p>
+            <p class="service-term">Hours: 8AM - 11PM</p>
           </div>
         </div>
         <div class="service-item">
-          <i class="fa-solid fa-ship"></i>
+          <i class="fa-sharp fa-solid fa-arrow-rotate-left"></i>
           <div class="service-item-text">
-            <p>Worldwide Delivery</p>
-            <p>For Order Over $100</p>
+            <p class="service-title">Return Policy</p>
+            <p class="service-term">Easy & free Return</p>
           </div>
         </div>
         <div class="service-item">
-          <i class="fa-solid fa-ship"></i>
+          <i class="fa-solid fa-ticket"></i>
           <div class="service-item-text">
-            <p>Worldwide Delivery</p>
-            <p>For Order Over $100</p>
+            <p class="service-title">30% Money Back</p>
+            <p class="service-term">For Order Over $100</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+
 
   <!-- SECTION BLOG  -->
   <section class="blog">
