--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
   <!-- css  -->
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/query.css">
   <title>Aircommerce</title>
 </head>
 
@@ -86,6 +87,7 @@
     </ul>
 
     <div class="banner-wrapper flex">
+
       <div class="banner-text">
         <p class="trending">Trending Item</p>
         <p class="heading">WOMEN'S LATEST FASHION SALE</p>
@@ -110,7 +112,7 @@
       </div>
       <span class="amount">(53)</span>
     </div>
-    <div class="category-item">
+    <div class="category-item hide-phone">
       <div class="content">
         <div class="category-image">
           <img src="/images/icons/coat.svg" alt="" />
@@ -122,7 +124,7 @@
       </div>
       <span class="amount">(53)</span>
     </div>
-    <div class="category-item">
+    <div class="category-item hide">
       <div class="content">
         <div class="category-image">
           <img src="/images/icons/glasses.svg" alt="" />
@@ -134,7 +136,7 @@
       </div>
       <span class="amount">(53)</span>
     </div>
-    <div class="category-item">
+    <div class="category-item hide">
       <div class="content">
         <div class="category-image">
           <img src="/images/icons/shorts.svg" alt="" />
@@ -242,13 +244,14 @@
     </div>
     <!-- MAIN RIGHT  -->
     <section class="right">
-      <div class="right-headers">
-        <h3>New Arrivals</h3>
-        <h3>Trending</h3>
-        <h3>Top Rated</h3>
-      </div>
+      <!-- <div class="right-headers">
+
+
+       
+      </div> -->
       <div class="right-sections">
         <div class="arrivals">
+          <h3>New Arrivals</h3>
           <div class="arrivals-item">
             <img src="/images/products/clothes-1.jpg" alt="" />
             <div class="arrivals-item-text">
@@ -283,7 +286,9 @@
           </div>
         </div>
         <div class="trending">
+          <h3>Trending</h3>
           <div class="arrivals-item">
+
             <img src="/images/products/sports-1.jpg" alt="" />
             <div class="arrivals-item-text">
               <h4>Running & Trekking Sh...</h4>
@@ -317,6 +322,7 @@
           </div>
         </div>
         <div class="rated">
+          <h3>Top Rated</h3>
           <div class="arrivals-item">
             <img src="/images/products/watch-3.jpg" alt="" />
             <div class="arrivals-item-text">
