Add responsive code

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <li>HOT OFFERS</li>
     </ul>
 
-    <div class="banner-wrapper flex">
-
+    <div class="banner-wrapper">
+      <img src="/images/banners/banner-1.jpg" alt="">
       <div class="banner-text">
         <p class="trending">Trending Item</p>
         <p class="heading">WOMEN'S LATEST FASHION SALE</p>
