--- a/index.html
+++ b/index.html
@@ -788,6 +788,15 @@
       <p>Copyright &copy; AirCommerce All Rights Reserved.</p>
     </section>
   </footer>
+
+  <div class="bottom-bar">
+    <i class="bi bi-list"></i>
+    <!-- <i class="bi bi-bag"></i> -->
+    <i class="bi bi-handbag"></i>
+    <i class="bi bi-house-door"></i>
+    <i class="bi bi-heart"></i>
+    <i class="bi bi-grid"></i>
+  </div>
 </body>
 
 </html>
